--- a/.github/workflows/aula02-push-eventos.yml
+++ b/.github/workflows/aula02-push-eventos.yml
@@ -9,5 +9,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: step para a ilustrar eventos
-        run: echo Hello, world!
+        run: echo Hello, world 2!
 
