--- a/.github/workflows/class02-artifacts.yml
+++ b/.github/workflows/class02-artifacts.yml
@@ -8,12 +8,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: create an artifact for reuse
-        run: echo "Full featured artifact" > /tmp/build-result.txt
+        run: echo "Full featured artifact" > build-result.txt
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - name: use of artifact created
-        run: ls /tmp/build-result.txt
+        run: ls build-result.txt
 
