--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,4 +1,4 @@
-name: steps examples
+name: Workflow Actions
 
 on:
   push
@@ -13,15 +13,4 @@ jobs:
           node-version: '14'
       - name: shows node version configured.
         run: node --version
-
-  hello_world_job:
-    runs-on: ubuntu-latest
-    name: Example of custom action
-    steps:
-      - id: step-caller
-        uses: ".github/actions/hello"
-        with:
-          the-caller: 'Myself'
-      - run: echo random-number ${{ steps.step-caller.outputs.random-number }}
-        shell: bash
 
