--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,4 +1,4 @@
-name: Workflow Actions
+name: Class 03 - Workflow Actions
 
 on:
   push
@@ -13,4 +13,15 @@ jobs:
           node-version: '14'
       - name: shows node version configured.
         run: node --version
+
+  hello_world_job:
+    runs-on: ubuntu-latest
+    name: Example of custom action
+    steps:
+      - id: step-caller
+        uses: "./.github/actions/hello"
+        with:
+          the-caller: 'Myself'
+      - run: echo random-number ${{ steps.step-caller.outputs.random-number }}
+        shell: bash
 
