--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,7 +19,7 @@ jobs:
     name: Example of custom action
     steps:
       - id: step-caller
-        uses: ".github/actions/hello"
+        uses: "./.github/actions/hello/action.yml"
         with:
           the-caller: 'Myself'
       - run: echo random-number ${{ steps.step-caller.outputs.random-number }}
