--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,7 +19,7 @@ jobs:
     name: Example of custom action
     steps:
       - name: Checkout Actions
-        uses: actions/checkout
+        uses: actions/checkout@v2
       - id: step-caller
         uses: "./.github/actions/hello/"
         with:
