--- a/.github/workflows/class03-actions.yml
+++ b/.github/workflows/class03-actions.yml
@@ -7,7 +7,7 @@ jobs:
   marketplace:
     runs-on: ubuntu-latest
     steps:
-      - name: Example of use of marketplace
+      - name: Marketplace Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '14'
