--- a/.github/workflows/class05-ansible-basic.yml
+++ b/.github/workflows/class05-ansible-basic.yml
@@ -11,3 +11,12 @@ jobs:
           python-version: '3.x'
       - run: ansible --version
 
+  ansible-ping:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - run: ansible-playbook .environment/ping.yml
+
