--- a/.github/workflows/class05-ansible-basic.yml
+++ b/.github/workflows/class05-ansible-basic.yml
@@ -10,6 +10,7 @@ jobs:
         with:
           python-version: '3.x'
       - run: ansible --version
+      - run: python --version
 
   ansible-ping:
     runs-on: ubuntu-latest
